fixed blurred background changing spacing of sidebar  on desktop

--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -187,9 +187,9 @@
 	bottom: 0;
 	left: 0;
 	background: rgba($overlay-background-color, $overlay-background-opacity);
-	backdrop-filter: blur(8px); // This be the blur
-  	height: 100vh;
-	width: 100%;
+	backdrop-filter: blur($overlay-background-blur-pixels); // This be the blur
+  	//height: 100vh;
+	//width: 100%;
 	overflow: auto;
 
 	visibility: hidden;
