--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,7 @@ $accent-color: {{ site.data.settings.color_settings.accent_color }};
 
 $overlay-background-color: {{ site.data.settings.color_settings.overlay_background_color }};
 $overlay-background-opacity: {{ site.data.settings.color_settings.overlay_background_opacity }};
+$overlay-background-blur-pixels: {{ site.data.settings.color_settings.overlay_background_blur_pixels }};
 $overlay-text-color: {{ site.data.settings.color_settings.overlay_text_color }};
 $overlay-accent-color: {{ site.data.settings.color_settings.overlay_accent_color }};
 
